Fri Jul  6 20:38:00 UTC 2007  Martin Corino  <mcorino@remedy.nl>

        * TAO_IDL/be/be_interface.cpp:
          Restored OpenVMS specific code.

Fri Jul  6 10:18:16 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>

        * MPC/config/gen_ostream.mpb:
        * tao/AnyTypeCode/TypeCode.cpp:
        * tao/AnyTypeCode/Any.h:
        * tao/AnyTypeCode/Any.cpp:
        * tao/AnyTypeCode/TypeCode.h:
        * tao/Object.h:
        * tao/Valuetype/AbstractBase.h:
        * tao/Valuetype/ValueBase.cpp:
        * tao/Valuetype/AbstractBase.cpp:
        * tao/Valuetype/ValueBase.h:
        * tao/Object.cpp:
        
          Added a flag, defined by when the gen_ostream feature is turned on,
          that guards the ostream operators for Object, ValueBase, Any,
          TypeCode, and AbstractBase.

Fri Jul  6 05:03:43 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * orbsvcs/examples/ImR/Advanced/TestClient.cpp:
        * orbsvcs/examples/ImR/Advanced/TestServer.cpp:
        * orbsvcs/examples/ImR/Advanced/manager_main.cpp:
        * orbsvcs/examples/ImR/Combined_Service/dynserver.cpp:
        * orbsvcs/examples/LoadBalancing/StockFactory.cpp:
        * orbsvcs/examples/Notify/Federation/Agent/Agent.cpp:
        * orbsvcs/examples/Notify/Federation/Gate/Gate.cpp:

          Fixed ACE_OS fuzz warnings. Use ACE_OS calls instead of raw OS function
          where possible. If fuzz detected a false-positive, then disable
          the ACE_OS fuzz check for that section of the code.

Thu Jul  5 18:50:00 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/Notify_Service/Notify_Server.cpp:
        * orbsvcs/orbsvcs/Notify/Properties.cpp:
        * orbsvcs/orbsvcs/Notify/Properties.h:
          Make the protocols an unmanages singleton and leak them at process
          exit. When loading the notification service as dll it can happen
          that we unload it after the unload of the anytypecode library