@@ -1,3 +1,8 @@
+Sat Jul  7 09:43:00 UTC 2007  Martin Corino  <mcorino@remedy.nl>
+
+        * TAO_IDL/driver/drv_preproc.cpp:
+          Restored OpenVMS specific code.
+
 Fri Jul  6 20:38:00 UTC 2007  Martin Corino  <mcorino@remedy.nl>
 
         * TAO_IDL/be/be_interface.cpp:
